<resources>
    <string name="app_name">Bnin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nutritional_info">Nutritional information</string>
    <string name="glutenFree">gluten free</string>
    <string name="vegan">vegan</string>
    <string name="vegetarian">vegetarian</string>
    <string name="veryHealthy">very healthy</string>
    <string name="dairyFree">dairy free</string>
    <string name="instructions_title">Instructions</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>