<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipeDetailsFragment">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:fitsSystemWindows="true"
            >
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
                <ImageView
                    android:padding="20dp"
                    android:id="@+id/recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_background"
            android:padding="10dp"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:weightSum="4">
                    <TextView
                        android:id="@+id/recipe_title"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textSize="25dp"
                        android:textColor="@color/black"
                        android:paddingStart="20dp"
                        />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:layout_gravity="right"
                        >
                        <TextView
                            android:id="@+id/recipe_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:padding="5dp"
                            />
                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_timer"
                            android:layout_gravity="center"
                            android:padding="5dp"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10sp">
                    <GridLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:columnCount="2"
                        android:rowCount="1"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:textColor="@color/Pink"
                            android:text="@string/nutritional_info"
                            android:paddingStart="15dp"
                            android:textSize="25sp"/>
                        <ImageButton
                            android:id="@+id/ExpandCollapseNutritionalInformation"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_expand_less"
                            android:layout_gravity="right"
                            />
                    </GridLayout>
                    <LinearLayout
                        android:id="@+id/nutritionalInformationDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_height="30dp"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            >
                            <ImageView
                                style="@style/NutritionalInformationIconStyle"
                                app:srcCompat="@drawable/ic_gluten_free"
                                />
                            <TextView
                                style="@style/NutritionalInformationStyle"
                                android:text="@string/glutenFree"
                                />

                            <CheckBox
                                android:id="@+id/glutenFreeCb"
                                style="@style/CheckboxStyle"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_height="30dp"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            >
                            <ImageView
                                style="@style/NutritionalInformationIconStyle"
                                app:srcCompat="@drawable/ic_vegan"
                                />
                            <TextView
                                style="@style/NutritionalInformationStyle"
                                android:text="@string/vegan"
                                />
                            <CheckBox
                                android:id="@+id/veganCb"
                                style="@style/CheckboxStyle"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_height="30dp"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            >
                            <ImageView
                                style="@style/NutritionalInformationIconStyle"
                                app:srcCompat="@drawable/ic_vegetarian"
                                />
                            <TextView
                                style="@style/NutritionalInformationStyle"
                                android:text="@string/vegetarian"
                                />
                            <CheckBox
                                android:id="@+id/vegetarianCb"
                                style="@style/CheckboxStyle"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_height="30dp"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            >
                            <ImageView
                                style="@style/NutritionalInformationIconStyle"
                                app:srcCompat="@drawable/ic_healthy_food"
                                />
                            <TextView
                                style="@style/NutritionalInformationStyle"
                                android:text="@string/veryHealthy"
                                />
                            <CheckBox
                                android:id="@+id/veryHealthyCb"
                                style="@style/CheckboxStyle" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_height="30dp"
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            >
                            <ImageView
                                style="@style/NutritionalInformationIconStyle"
                                app:srcCompat="@drawable/ic_dairy_free"
                                />
                            <TextView
                                style="@style/NutritionalInformationStyle"
                                android:text="@string/dairyFree"
                                />
                            <CheckBox
                                android:id="@+id/dairyFreeCb"
                                style="@style/CheckboxStyle" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:orientation="vertical">
                    <GridLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:columnCount="2"
                        android:rowCount="1"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="@string/instructions_title"
                            android:textColor="@color/Pink"
                            android:paddingStart="20dp"
                            android:textSize="25sp"/>
                        <ImageButton
                            android:id="@+id/ExpandCollapseSteps"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_expand_less"
                            android:layout_gravity="right"
                            />
                    </GridLayout>
                    <TextView
                        android:id="@+id/recipe_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:textSize="20sp"
                        android:visibility="visible"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>